[package]
name = "solaris-rs" # solaris is taken thanks to a namesquatting cryptobro with a valueless coin.
description = "A library to predict the position of the Sun"
version = "0.1"
edition = "2021"
repository = "https://github.com/ctrlaltf2/solaris"
license = "MIT"
keywords = ["astronomy", "physics", "solar_tracking", "solar_power", "CPV"]
categories = ["algorithms", "science", "aerospace"]

[dependencies]
num = "0.4.1"

[lib]
name = "solaris"
